added the footer and trending section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Sushi Store</title>
   </head>
   <body>
+
+    <!-- Header section start -->
+
     <header>
       <nav class="header__nav">
         <div class="header__logo">
@@ -43,7 +46,9 @@
       </nav>
     </header>
 
-    <!-- Hero section start -->
+    <!-- Header Section End -->
+
+    <!-- Hero Section Start -->
 
     <section class="hero">
       <div class="hero-image">
@@ -89,9 +94,9 @@
       </div>
     </section>
 
-    <!-- Hero section end -->
+    <!-- Hero Section End -->
 
-    <!-- About us section start -->
+    <!-- About-Us Section Start -->
 
     <section class="about-us" id="about-us">
       <div class="about-us__image">
@@ -119,9 +124,9 @@
       </div>
     </section>
 
-    <!-- About us section end -->
+    <!-- About-Us Section End -->
 
-    <!-- Popular foods section start -->
+    <!-- Popular Foods Section Start -->
 
     <section class="popular-foods" id="menu">
       <h2 class="popular-foods__title" data-aos="flip-up">Popular Food / 人気</h2>
@@ -200,12 +205,11 @@
       </button>
     </section>
 
-    <!-- Popular foods section end -->
+    <!-- Popular Foods Section End -->
 
-    <!-- Trending foods section start -->
+    <!-- Trending Foods Sections Start -->
 
     <section class="trending" id="food">
-
       <section class="trending-sushi">
         <div class="trending__content" data-aos="fade-right">
           <p class="sushi__subtitle">What’s Trending / トレンド</p>
@@ -288,8 +292,7 @@
         <div class="trending__content" data-aos="fade-left">
           <p class="sushi__subtitle">What’s Trending / トレンド</p>
   
-          <h3 class="sushi__title">Japanese Drinks
-          </h3>
+          <h3 class="sushi__title">Japanese Drinks</h3>
           <p class="sushi__description">Feel the taste of the most delicious Japanese drinks here.
           </p>
   
@@ -334,11 +337,56 @@
           </ul>
         </div>
       </section>
-      
     </section>
 
-    <!-- Trending foods section end -->
+    <!-- Trending Foods Sections End -->
 
+    <!-- Subscription Section Start -->
+
+    <section class="subscription flex-center" id="services">
+      <h2 data-aos="flip-down">
+        Get offers stright <br />
+        to your inbox
+      </h2>
+      <p data-aos="fade-up">Sign up for the Sushi Store newsletter</p>
+
+      <div class="subscription__form" data-aos="fade-up">
+        <input type="text" placeholder="Enter your email address"/>
+        <button>Get Started</button>
+      </div>
+    </section>
+
+    <!-- Subscription Section End -->
+
+    <!-- Footer Section Start -->
+
+    <footer class="footer flex-between">
+      <h3 class="footer__logo">
+        <span>Sushi</span>Store
+      </h3>
+
+      <ul class="footer__nav">
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#food">Food</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about-us">About Us</a></li>
+      </ul>
+
+      <ul class="footer__social">
+        <li class="flex-center">
+          <img src="assets/facebook.svg" alt="facebook" />
+        </li>
+        <li class="flex-center">
+          <img src="assets/instagram.svg" alt="instagram" />
+        </li>
+        <li class="flex-center">
+          <img src="assets/twitter.svg" alt="twitter" />
+        </li>
+      </ul>
+      
+    </footer>
+
+    <!-- Footer Section End -->
 
     <script src="js/script.js" type="module"></script>
   </body>
