--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/sushi.png" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Sushi Store</title>
+    <title>.Arun Store</title>
   </head>
   <body>
 
