minor changes on footer section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <nav class="header__nav">
         <div class="header__logo">
-          <h4 data-aos="fade-down">SushiStore</h4>
+          <a href="/"><h4 data-aos="fade-down">SushiStore</h4></a>
           <div 
           class="header__logo-overlay"></div>
         </div>
@@ -210,6 +210,7 @@
     <!-- Trending Foods Sections Start -->
 
     <section class="trending" id="food">
+
       <section class="trending-sushi">
         <div class="trending__content" data-aos="fade-right">
           <p class="sushi__subtitle">What’s Trending / トレンド</p>
@@ -292,7 +293,8 @@
         <div class="trending__content" data-aos="fade-left">
           <p class="sushi__subtitle">What’s Trending / トレンド</p>
   
-          <h3 class="sushi__title">Japanese Drinks</h3>
+          <h3 class="sushi__title">Japanese Drinks
+          </h3>
           <p class="sushi__description">Feel the taste of the most delicious Japanese drinks here.
           </p>
   
@@ -337,6 +339,7 @@
           </ul>
         </div>
       </section>
+
     </section>
 
     <!-- Trending Foods Sections End -->
@@ -369,7 +372,6 @@
         <li><a href="#menu">Menu</a></li>
         <li><a href="#food">Food</a></li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#about-us">About Us</a></li>
       </ul>
 
       <ul class="footer__social">
